Method renames